--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "npx ts-node src/index.ts",
     "generate-keypair": "npm run build && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
