--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "1.0.0",
   "description": "This project has a small abstraction over the original [WebCryptoAPI](https://nodejs.org/api/webcrypto.html) for ECDSA signatures.",
   "main": "dist/index.js",
-  "scripts": {
-    "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "npx ts-node src/index.ts",
-    "generate-keypair": "npm run build && node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Lokesh Kumar (codeTIT4N)",
+  "author": "Lokesh Kumar",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "test": "mocha 'test/*.ts'",
+    "example": "npx ts-node example.ts"
+  },
   "devDependencies": {
+    "@types/chai": "^4.3.5",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^20.4.8",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
     "typescript": "^5.1.6"
   }
 }
