--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "test": "mocha 'test/*.ts'",
-    "example": "npx ts-node example.ts"
+    "test": "NODE_OPTIONS=\"--loader ts-node/esm\" mocha 'tests/**/*.ts'",
+    "example": "ts-node example.ts"
   },
   "devDependencies": {
     "@types/chai": "^4.3.5",
@@ -16,6 +16,7 @@
     "@types/node": "^20.4.8",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
 }
